More Makefile updates

--- a/eglib/Makefile
+++ b/eglib/Makefile
@@ -1,15 +1,17 @@
 
 CC = gcc
-CFLAGS  = -g -W -Wall -fPIC
+CFLAGS  = -g -W -Wall -fPIC -shared
 
 # file extensions
 ifeq ($(OS), WINNT)
   SHLIB_EXT = dll
   SHELL_EXT = bat
 else ifeq ($(OS), Darwin)
+  LIBTOOL = glibtool
   SHLIB_EXT = dylib
   SHELL_EXT = sh
 else
+  LIBTOOL = libtool
   SHLIB_EXT = so
   SHELL_EXT = sh
 endif
@@ -18,7 +20,6 @@ SRCS = egvec.c egop.c
 OBJS = $(SRCS:.c=.o)
 LIBNAME = eglib
 DEMO = egdemo
-LIBTOOL = libtool
 LIB = lib$(LIBNAME).$(SHLIB_EXT)
 
 all:    $(LIB) $(DEMO)
@@ -27,7 +28,7 @@ all:    $(LIB) $(DEMO)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(LIB): $(OBJS)
-	$(LIBTOOL) -o $(LIB) $(OBJS)
+	$(LIBTOOL) --mode=link gcc -o $(LIB) $(OBJS) -lm
 
 $(DEMO): $(LIB) $(DEMO).c
 	$(CC) $(DEMO).c -o $(DEMO) -L. -l$(LIBNAME) -lm
