tweaks towards getting a clean compile on both Linux and Darwin

--- a/eglib/Makefile
+++ b/eglib/Makefile
@@ -1,24 +1,27 @@
 
 CC = gcc
-CFLAGS  = -g -W -Wall -fPIC -shared
+CFLAGS  = -g -W -Wall
 
-# file extensions
+# http://stackoverflow.com/questions/714100/os-detecting-makefile
 ifeq ($(OS), WINNT)
   SHLIB_EXT = dll
-  SHELL_EXT = bat
-else ifeq ($(OS), Darwin)
-  LIBTOOL = glibtool
-  SHLIB_EXT = dylib
-  SHELL_EXT = sh
 else
-  LIBTOOL = libtool
-  SHLIB_EXT = so
-  SHELL_EXT = sh
+  UNAME_S := $(shell uname -s)
+  ifeq ($(UNAME_S),Linux)
+    SHLIB_EXT = so
+    CFLAGS += -fPIC
+    LD = ld -shared
+  endif
+  ifeq ($(UNAME_S),Darwin)
+    SHLIB_EXT = dylib
+    CFLAGS += -dynamic
+    LD = libtool -dynamic
+  endif
 endif
 
 SRCS = egvec.c egop.c
 OBJS = $(SRCS:.c=.o)
-LIBNAME = eglib
+LIBNAME = eg
 DEMO = egdemo
 LIB = lib$(LIBNAME).$(SHLIB_EXT)
 
@@ -28,10 +31,10 @@ all:    $(LIB) $(DEMO)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(LIB): $(OBJS)
-	$(LIBTOOL) --mode=link gcc -o $(LIB) $(OBJS) -lm
+	$(LD) -o $(LIB) $(OBJS) -lm
 
 $(DEMO): $(LIB) $(DEMO).c
-	$(CC) $(DEMO).c -o $(DEMO) -L. -l$(LIBNAME) -lm
+	$(CC) $(CFLAGS) $(DEMO).c -o $(DEMO) -L. -l$(LIBNAME) -lm
 
 clean:
-	rm -f *.o $(LIB) $(DEMO)
+	rm -rf *.o $(LIB) $(DEMO) $(DEMO).dSYM
